# filewatch

./: .gitignore  README.md  handler.py  head_directories.json  main.py  pyproject.toml
client/: go.mod  go.sum  head_directories.json
client/cmd/: login_credentials.json  main.go
client/pkg/filewatch/: filewatch.go  head_directories.json
client/pkg/helper/: helper.go
server/: go.mod  main.go  users.json
