[tool.poetry]
name = "filewatch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
watchdog = "^6.0.0"
requests = "^2.32.5"
dotenv = "^0.9.9"
websockets = "^16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
